# nonogram-solver

./: Main.hs  Puzzle.hs  PuzzlePrinter.hs  PuzzleSolver.hs  PuzzleSolverTest.hs  nonogram-solver.cabal  puzzle-solver.hs
example-puzzles/: key.txt
src/: PuzzleReader.hs
test/: MainTest.hs  PuzzleSolverTest.hs  puzzle-solver-test.hs
