name: nonogram-solver
version: 1.3.0
author: Adam Ciolkowski
build-type: Simple
cabal-version: >= 1.2

executable solver
  hs-source-dirs: src/
  main-is: Main.hs
  build-depends: base

test-suite unit-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src/ test/
  main-is: MainTest.hs
  build-depends: HUnit
